# edifact_mapper

./: .claude-orchestrator.toml  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
crates/automapper-api/: Cargo.toml  build.rs
crates/automapper-api/src/: error.rs  lib.rs  main.rs  response_generator.rs  state.rs  validation_bridge.rs
crates/automapper-api/src/contracts/: convert.rs  convert_v2.rs  coordinators.rs  error.rs  fixtures.rs  health.rs  inspect.rs  mod.rs  reverse_v2.rs  trace.rs  validate_bo4e.rs  validate_v2.rs
crates/automapper-api/src/grpc/: inspection.rs  mod.rs  transform.rs
crates/automapper-api/src/routes/: convert.rs  convert_v2.rs  coordinators.rs  fixtures.rs  health.rs  inspect.rs  mod.rs  reverse_pipeline.rs  reverse_v2.rs  validate_bo4e.rs  validate_v2.rs
crates/automapper-api/tests/: api_integration.rs  contract_tests.rs  convert_v2_test.rs  grpc_integration.rs  reverse_v2_test.rs  validate_bo4e_test.rs  validate_v2_test.rs
crates/automapper-core/: Cargo.toml
crates/automapper-core/benches/: parser_throughput.rs
crates/automapper-core/src/: batch.rs  context.rs  coordinator.rs  error.rs  lib.rs  traits.rs  utilmd_coordinator.rs  version.rs
crates/automapper-core/src/mappers/: bilanzierung.rs  geschaeftspartner.rs  lokationszuordnung.rs  mabis_zaehlpunkt.rs  marktlokation.rs  messlokation.rs  mod.rs  netzlokation.rs  produktpaket.rs  prozessdaten.rs  seq_groups.rs  steuerbare_ressource.rs  technische_ressource.rs  tranche.rs  vertrag.rs  zaehler.rs  zeitscheibe.rs
crates/automapper-core/src/writer/: document_writer.rs  entity_writers.rs  mod.rs  segment_writer.rs
crates/automapper-core/tests/: forward_mapping_test.rs  full_pipeline_test.rs  roundtrip_bo4e_test.rs  roundtrip_test.rs  trait_dispatch_test.rs  utilmd_fixture_test.rs
crates/automapper-generator/: Cargo.toml
crates/automapper-generator/src/: compile_cache.rs  error.rs  lib.rs  main.rs
crates/automapper-generator/src/codegen/: code_enum_index.rs  code_list_extractor.rs  coordinator_gen.rs  mapper_gen.rs  mig_type_gen.rs  mod.rs  path_migration.rs  pid_mapping_gen.rs  pid_type_gen.rs  schema_lookup.rs  segment_order.rs  toml_scaffold_gen.rs  typescript_gen.rs  version_config_gen.rs
crates/automapper-generator/tests/: ahb_parsing_tests.rs  ahb_types_tests.rs  cli_tests.rs  condition_codegen_tests.rs  condition_types_tests.rs  coordinator_gen_tests.rs  e2e_generate_mappers_tests.rs  error_tests.rs  fixture_enhancer_test.rs  fixture_generator_test.rs  fixture_migrator_test.rs  fixture_renderer_test.rs  generate_conditions_cli_tests.rs  generate_to_mig_types.rs  generated_compiles_tests.rs  incremental_tests.rs  mapper_gen_tests.rs  mig_parsing_tests.rs  mig_type_gen_test.rs  mock_claude_integration_test.rs  pid_type_gen_test.rs  prompt_tests.rs  real_xml_tests.rs  schema_diff_test.rs  schema_snapshot_tests.rs  schema_types_tests.rs  schema_validation_tests.rs  segment_order_tests.rs  typescript_gen_test.rs  version_config_tests.rs
crates/automapper-validation/: Cargo.toml
crates/automapper-validation/src/: error.rs  eval.rs  expr.rs  lib.rs  validator.rs
crates/automapper-validation/tests/: expr_eval_integration.rs  parser_proptest.rs  snapshot_test.rs  validator_integration.rs
crates/automapper-web/: Cargo.toml  index.html  trunk.toml
crates/automapper-web/src/: api_client.rs  app.rs  lib.rs  main.rs  types.rs
crates/automapper-web/style/: main.css
crates/automapper-web/tests/: wasm_build.rs
crates/bo4e-extensions/: Cargo.toml
crates/bo4e-extensions/src/: bo4e_types.rs  data_quality.rs  edifact_types.rs  lib.rs  link_registry.rs  passthrough.rs  prozessdaten.rs  seq_groups.rs  transaction.rs  uri.rs  with_validity.rs  zeitraum.rs
crates/edifact-parser/: Cargo.toml
crates/edifact-parser/src/: error.rs  handler.rs  lib.rs  parser.rs  segment_builder.rs  tokenizer.rs
crates/edifact-parser/tests/: integration_parse.rs  parse_all_fixtures.rs  roundtrip_write_test.rs
crates/fixture-renderer/: Cargo.toml
crates/fixture-renderer/src/: error.rs  lib.rs  main.rs  renderer.rs
crates/fixture-renderer/tests/: render_fixture_test.rs
crates/mig-assembly/: Cargo.toml
crates/mig-assembly/benches/: assembly_throughput.rs
crates/mig-assembly/src/: assembler.rs  cursor.rs  diagnostic.rs  disassembler.rs  error.rs  lib.rs  matcher.rs  navigator.rs  parsing.rs  pid_detect.rs  pid_filter.rs  renderer.rs  roundtrip.rs  service.rs  test_support.rs  tokenize.rs
crates/mig-assembly/tests/: disassembler_test.rs  integration_test.rs  interchange_service_test.rs  roundtrip_test.rs  service_test.rs  snapshot_test.rs
crates/mig-bo4e/: Cargo.toml
crates/mig-bo4e/src/: code_lookup.rs  definition.rs  engine.rs  error.rs  error_mapping.rs  handlers.rs  lib.rs  model.rs  path_resolver.rs  pid_schema_index.rs  segment_structure.rs
crates/mig-bo4e/tests/: aperak_contrl_test.rs  aperak_roundtrip_test.rs  bo4e_schema_validation_test.rs  cache_test.rs  comdis_roundtrip_test.rs  definition_test.rs  entity_mapping_test.rs  error_mapping_test.rs  forward_mapping_test.rs  fv2510_bulk_roundtrip_test.rs  fv2604_bulk_roundtrip_test.rs  handler_test.rs  iftsta_roundtrip_test.rs  insrpt_roundtrip_test.rs  interchange_integration_test.rs  interchange_reverse_test.rs  invoic_roundtrip_test.rs  map_all_forward_test.rs  mapping_files_test.rs  migration_comparison_test.rs  mscons_roundtrip_test.rs  ordchg_roundtrip_test.rs  orders_roundtrip_test.rs  ordrsp_roundtrip_test.rs  partin_roundtrip_test.rs  path_resolver_integration_test.rs  pid_55003_to_55012_test.rs  pid_55013_to_55035_test.rs  pid_bulk_roundtrip_test.rs  pid_pipeline_test.rs  pricat_roundtrip_test.rs  quotes_roundtrip_test.rs  remadv_roundtrip_test.rs  reqote_roundtrip_test.rs  reverse_all_test.rs  reverse_mapping_test.rs  reverse_roundtrip_test.rs  roundtrip_55001_test.rs  split_loader_test.rs  test_gas_debug.rs  (+7 more)
crates/mig-types/: Cargo.toml
crates/mig-types/src/: cursor.rs  lib.rs  navigator.rs  segment.rs  traits.rs
crates/mig-types/tests/: compile_test.rs  pid_tree_trait_test.rs
(+2052 files in other folders)
