[package]
name = "automapper-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "REST + gRPC server for EDIFACT/BO4E conversion"

[dependencies]
automapper-core.workspace = true
automapper-validation.workspace = true
bo4e-extensions.workspace = true
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[dev-dependencies]
