[package]
name = "automapper-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum REST API + tonic gRPC server for edifact-bo4e-automapper"
publish = false

[[bin]]
name = "automapper-api"
path = "src/main.rs"

[lib]
name = "automapper_api"
path = "src/lib.rs"

[dependencies]
# Internal crates
automapper-core.workspace = true
automapper-generator = { path = "../automapper-generator" }
edifact-parser = { path = "../edifact-parser" }
edifact-types = { path = "../edifact-types" }
bo4e-extensions = { path = "../bo4e-extensions" }
mig-assembly = { path = "../mig-assembly" }
mig-bo4e = { path = "../mig-bo4e" }

# Web framework
axum = { version = "0.8", features = ["json", "macros"] }
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# gRPC
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true
async-stream = "0.3"
tokio-stream = "0.1"

# Observability
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full", "test-util"] }
tonic.workspace = true
