[package]
name = "automapper-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core automapper — coordinators, mappers, builders, writers for EDIFACT/BO4E conversion"

[dependencies]
edifact-types.workspace = true
edifact-parser.workspace = true
bo4e-extensions.workspace = true
thiserror.workspace = true
rayon.workspace = true
chrono.workspace = true

[dev-dependencies]
insta.workspace = true
test-case.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "parser_throughput"
harness = false
