[package]
name = "automapper-generator"
version = "0.1.0"
edition = "2021"
description = "CLI tool for generating Rust mapper code from MIG/AHB XML schemas"

[[bin]]
name = "automapper-generator"
path = "src/main.rs"

[dependencies]
thiserror = "2"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "redactions"] }
tempfile = "3"
