[package]
name = "automapper-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AHB validation — condition expression parser and evaluator"

[dependencies]
edifact-types.workspace = true
bo4e-extensions.workspace = true
automapper-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true
