[package]
name = "automapper-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AHB condition expression parsing, evaluation, and EDIFACT validation"

[dependencies]
edifact-types.workspace = true
edifact-parser.workspace = true
bo4e-extensions.workspace = true
mig-types.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
test-case.workspace = true
pretty_assertions = "1"
proptest.workspace = true
serde_json.workspace = true
