[package]
name = "automapper-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Leptos WASM frontend for the EDIFACT converter"

[dependencies]
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
