[package]
name = "edifact-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Streaming EDIFACT tokenizer and SAX-style parser — standalone, no BO4E dependency"

[dependencies]
edifact-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
