[package]
name = "mig-assembly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MIG-guided EDIFACT tree assembly — parse RawSegments into typed MIG trees"

[dependencies]
edifact-types.workspace = true
edifact-parser.workspace = true
mig-types = { path = "../mig-types" }
automapper-generator = { path = "../automapper-generator" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "assembly_throughput"
harness = false
