[package]
name = "mig-bo4e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Declarative TOML-based MIG-tree to BO4E mapping engine"

[dependencies]
mig-types = { path = "../mig-types" }
mig-assembly = { path = "../mig-assembly" }
automapper-generator = { path = "../automapper-generator" }
bo4e-extensions.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
edifact-types.workspace = true
insta.workspace = true
tempfile.workspace = true
